Optimize: mobile nav, animations, SEO meta tags, accessibility, hover states

--- a/index.html
+++ b/index.html
@@ -2,11 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Win The Hour! - One Hour. Fully Lived.</title>
-    <meta name="description" content="A premium daily briefing and progressive concentration drill. Built for elite operators ready to bring the heat." />
+
+    <!-- Primary Meta Tags -->
+    <title>Win The Hour!™ - One Hour. Fully Lived.</title>
+    <meta name="title" content="Win The Hour!™ - One Hour. Fully Lived." />
+    <meta name="description" content="A premium daily briefing and progressive concentration drill. Ignite your focus. Win peace. Win joy. Built for elite operators ready to bring the heat." />
+    <meta name="keywords" content="productivity, focus, time management, daily briefing, concentration, mindfulness, fire blocks, elite performance" />
+    <meta name="author" content="Chude Muonelo" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Theme & Icons -->
     <meta name="theme-color" content="#0a0a0a" />
+    <meta name="msapplication-TileColor" content="#ef4444" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://winthehour-site.vercel.app/" />
+    <meta property="og:title" content="Win The Hour!™ - One Hour. Fully Lived." />
+    <meta property="og:description" content="A premium daily briefing and progressive concentration drill. Ignite your focus. Win peace. Win joy. Built for elite operators ready to bring the heat." />
+    <meta property="og:site_name" content="Win The Hour!" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://winthehour-site.vercel.app/" />
+    <meta property="twitter:title" content="Win The Hour!™ - One Hour. Fully Lived." />
+    <meta property="twitter:description" content="A premium daily briefing and progressive concentration drill. Ignite your focus. Win peace. Win joy. Built for elite operators ready to bring the heat." />
+
+    <!-- Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
   </head>
   <body>
     <div id="root"></div>
