--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
     <meta property="og:description" content="A premium daily briefing and progressive concentration drill. Ignite your focus. Win peace. Win joy. Built for elite operators ready to bring the heat." />
     <meta property="og:site_name" content="Win The Hour!" />
     <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=1200&h=630&fit=crop" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://winthehour-site.vercel.app/" />
     <meta property="twitter:title" content="Win The Hour!™ - One Hour. Fully Lived." />
     <meta property="twitter:description" content="A premium daily briefing and progressive concentration drill. Ignite your focus. Win peace. Win joy. Built for elite operators ready to bring the heat." />
-
-    <!-- Performance -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <meta property="twitter:image" content="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=1200&h=630&fit=crop" />
   </head>
   <body>
     <div id="root"></div>
