Add PWA support and install CTA to site
- Add manifest.json with brand colors, icons, and standalone display
- Add sw.js with cache-first asset strategy and network-first navigation
- Register service worker in main.tsx
- Add useInstallPrompt hook to capture and defer beforeinstallprompt
- Add InstallButton component (hidden when install unavailable)
- Wire Install App button into hero and final CTA on Home page
- Add PWA icons at 192x192 and 512x512
- Fix theme-color and apple-touch-icon in index.html

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Theme & Icons -->
-    <meta name="theme-color" content="#0a0a0a" />
-    <meta name="msapplication-TileColor" content="#ef4444" />
+    <meta name="theme-color" content="#0B0C10" />
+    <meta name="msapplication-TileColor" content="#FF5E1A" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
